# cpp-result

./: .clang-tidy  CMakeLists.txt  LICENSE  README.md
include/result/: result.hpp
tests/: ResultTests.cpp
